public/analytics-pro/v0.9.0rc6/_sources/reference/tmlt/analytics/metrics/_absolute_error/index.rst.txt
:orphan:

..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024


**********************
_absolute_error
**********************

.. py:module:: tmlt.analytics.metrics._absolute_error

.. autoapi-nested-parse::

   Metric functions relating to absolute error.











Classes
=======

.. list-table::

   * - :class:`.AbsoluteError`
     - Computes the absolute error between two scalar values.
   * - :class:`.QuantileAbsoluteError`
     - Computes the quantile of the empirical absolute error.
   * - :class:`.MedianAbsoluteError`
     - Computes the median absolute error.

   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: AbsoluteError(output, column = None, *, name = None, description = None, baselines = None)

   Bases: :class:`tmlt.analytics.metrics._base.ScalarMetric`

   Computes the absolute error between two scalar values.

   .. note::

       |PRO_NOTE|

   How it works:

   1. The algorithm takes as input two single-row tables: one representing the
      differentially private (DP) output and the other representing the baseline
      output.

      **DP Table (dp)**: This table contains the output data generated by a
      differentially private mechanism.

      **Baseline Table (baseline)**: This table contains the output data generated by a
      non-private or baseline mechanism. It serves as a reference point for comparison
      with the DP output.

      The scalar values are retrieved from these single-row dataframes. Both values are
      expected to be numeric (either integers or floats). If not, the algorithm raises
      a ``ValueError``.

   2. The algorithm computes the absolute error. Absolute error is calculated as the
      absolute difference between the DP and baseline values using the formula
      :math:`abs(dp - baseline)`.

   .. rubric:: Example

   ..
       >>> import pandas as pd
       >>> from pyspark.sql import SparkSession
       >>> from tmlt.analytics.metrics import AbsoluteError
       >>> spark = SparkSession.builder.getOrCreate()

   >>> dp_df = spark.createDataFrame(pd.DataFrame({"X": [5]}))
   >>> dp_outputs = {"O": dp_df}
   >>> baseline_df = spark.createDataFrame(pd.DataFrame({"X": [6]}))
   >>> baseline_outputs = {"O": baseline_df}

   >>> metric = AbsoluteError(output="O")
   >>> result = metric.compute_for_baseline(dp_outputs, baseline_outputs)
   >>> result
   1
   >>> metric.format(result)
   '1'






   .. automethod:: __init__
   .. py:method:: format(value)

      Returns a string representation of this object.


   .. py:method:: compute_on_scalar(dp_value, baseline_value)

      Computes metric value from DP and baseline values.


   .. py:method:: output()
      :property:

      Returns the name of the run output.


   .. py:method:: column()
      :property:

      Returns the name of the value column, if it is set.


   .. py:method:: compute_for_baseline(dp_outputs, baseline_outputs)

      Returns the metric value given the DP outputs and the baseline outputs.


   .. py:method:: name()
      :property:

      Returns the name of the metric.


   .. py:method:: description()
      :property:

      Returns the description of the metric.


   .. py:method:: baselines()
      :property:

      Returns the baselines used for the metric.


   .. py:method:: __call__(dp_outputs, baseline_outputs)

      Computes the given metric on the given DP and baseline outputs.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: QuantileAbsoluteError(output, quantile, measure_column, join_columns, *, name = None, description = None, baselines = None)

   Bases: :class:`tmlt.analytics.metrics._base.JoinedOutputMetric`

   Computes the quantile of the empirical absolute error.

   .. note::

       |PRO_NOTE|

   How it works:

   1. The algorithm takes as input two tables: one representing the differentially
      private (DP) output and the other representing the baseline output.

      **DP Table (dp)**: This table contains the output data generated by a
      differentially private mechanism.

      **Baseline Table (baseline)**: This table contains the output data generated by a
      non-private or baseline mechanism. It serves as a reference point for comparison
      with the DP output.

      The algorithm includes error handling to ensure the validity of the input data.
      It checks for the existence and numeric type of the ``measure_column``.

      The algorithm performs an inner join between the DP and baseline tables based on
      ``join_columns``. This join must be one-to-one, with each row in the DP table
      matching exactly one row in the baseline table, and vice versa.
      This ensures that there is a direct correspondence between the DP and baseline
      outputs for each entity, allowing for accurate comparison.

   2. After performing the join, the algorithm computes the absolute error for each
      group. Absolute error is calculated as the absolute difference between the
      corresponding values in the DP and baseline outputs using the formula
      :math:`abs(dp - baseline)`.

   3. The algorithm then calculates the n-th quantile of the absolute error across all
      groups.

      The algorithm handles cases where the quantile computation may result in an empty
      column, returning a NaN (not a number) value in such scenarios.

       .. note::
           * Provided algorithm assumes a one-to-one join scenario.
           * Nulls in the measure columns are dropped because the metric cannot
             handle null values, and the absolute error computation requires valid
             numeric values in both columns.

   .. rubric:: Example

   ..
       >>> import pandas as pd
       >>> from pyspark.sql import SparkSession
       >>> from tmlt.analytics.metrics import QuantileAbsoluteError
       >>> spark = SparkSession.builder.getOrCreate()

   >>> dp_df = spark.createDataFrame(
   ...     pd.DataFrame(
   ...         {
   ...             "A": ["a1", "a1", "a2"],
   ...             "X": [50, 110, 100]
   ...         }
   ...     )
   ... )
   >>> dp_outputs = {"O": dp_df}
   >>> baseline_df = spark.createDataFrame(
   ...     pd.DataFrame(
   ...         {
   ...             "A": ["a1", "a1", "a2"],
   ...             "X": [100, 100, 100]
   ...         }
   ...     )
   ... )
   >>> baseline_outputs = {"O": baseline_df}

   >>> metric = QuantileAbsoluteError(
   ...     output="O",
   ...     quantile=0.5,
   ...     measure_column="X",
   ...     join_columns=["A"]
   ... )
   >>> metric.quantile
   0.5
   >>> metric.join_columns
   ['A']
   >>> result = metric.compute_for_baseline(dp_outputs, baseline_outputs)
   >>> result
   10.0
   >>> metric.format(result)
   '10.0'



   .. list-table:: Methods

      * - :meth:`.quantile`
        - Returns the quantile.
      * - :meth:`.measure_column`
        - Returns name of the column to compute the quantile of absolute error over.
      * - :meth:`.format`
        - Returns a string representation of this object.
      * - :meth:`.compute_on_joined_output`
        - Computes quantile absolute error value from combined dataframe.
      * - :meth:`.output`
        - Retursn the name of the run output.
      * - :meth:`.join_columns`
        - Returns the name of the join columns.
      * - :meth:`.compute_for_baseline`
        - Computes metric value.
      * - :meth:`.name`
        - Returns the name of the metric.
      * - :meth:`.description`
        - Returns the description of the metric.
      * - :meth:`.baselines`
        - Returns the baselines used for the metric.
      * - :meth:`.__call__`
        - Computes the given metric on the given DP and baseline outputs.




   .. automethod:: __init__
   .. py:method:: quantile()
      :property:

      Returns the quantile.


   .. py:method:: measure_column()
      :property:

      Returns name of the column to compute the quantile of absolute error over.


   .. py:method:: format(value)

      Returns a string representation of this object.


   .. py:method:: compute_on_joined_output(joined_output)

      Computes quantile absolute error value from combined dataframe.


   .. py:method:: output()
      :property:

      Retursn the name of the run output.


   .. py:method:: join_columns()
      :property:

      Returns the name of the join columns.


   .. py:method:: compute_for_baseline(dp_outputs, baseline_outputs)

      Computes metric value.


   .. py:method:: name()
      :property:

      Returns the name of the metric.


   .. py:method:: description()
      :property:

      Returns the description of the metric.


   .. py:method:: baselines()
      :property:

      Returns the baselines used for the metric.


   .. py:method:: __call__(dp_outputs, baseline_outputs)

      Computes the given metric on the given DP and baseline outputs.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: MedianAbsoluteError(output, measure_column, join_columns, *, name = None, description = None, baselines = None)

   Bases: :class:`QuantileAbsoluteError`

   Computes the median absolute error.

   Equivalent to :class:`QuantileAbsoluteError` with ``quantile = 0.5``.

   .. note::

       |PRO_NOTE|

   .. rubric:: Example

   ..
       >>> import pandas as pd
       >>> from pyspark.sql import SparkSession
       >>> from tmlt.analytics.metrics import MedianAbsoluteError
       >>> spark = SparkSession.builder.getOrCreate()
       >>> dp_df = spark.createDataFrame(
       ...     pd.DataFrame(
       ...         {
       ...             "A": ["a1", "a1", "a2"],
       ...             "X": [50, 110, 100]
       ...         }
       ...     )
       ... )

   >>> dp_outputs = {"O": dp_df}
   >>> baseline_df = spark.createDataFrame(
   ...     pd.DataFrame(
   ...         {
   ...             "A": ["a1", "a1", "a2"],
   ...             "X": [100, 100, 100]
   ...         }
   ...     )
   ... )
   >>> baseline_outputs = {"O": baseline_df}

   >>> metric = MedianAbsoluteError(
   ...     output="O",
   ...     measure_column="X",
   ...     join_columns=["A"]
   ... )
   >>> metric.quantile
   0.5
   >>> metric.join_columns
   ['A']
   >>> result = metric.compute_for_baseline(dp_outputs, baseline_outputs)
   >>> result
   10.0
   >>> metric.format(result)
   '10.0'



   .. list-table:: Methods

      * - :meth:`.quantile`
        - Returns the quantile.
      * - :meth:`.measure_column`
        - Returns name of the column to compute the quantile of absolute error over.
      * - :meth:`.format`
        - Returns a string representation of this object.
      * - :meth:`.compute_on_joined_output`
        - Computes quantile absolute error value from combined dataframe.
      * - :meth:`.output`
        - Retursn the name of the run output.
      * - :meth:`.join_columns`
        - Returns the name of the join columns.
      * - :meth:`.compute_for_baseline`
        - Computes metric value.
      * - :meth:`.name`
        - Returns the name of the metric.
      * - :meth:`.description`
        - Returns the description of the metric.
      * - :meth:`.baselines`
        - Returns the baselines used for the metric.
      * - :meth:`.__call__`
        - Computes the given metric on the given DP and baseline outputs.




   .. automethod:: __init__
   .. py:method:: quantile()
      :property:

      Returns the quantile.


   .. py:method:: measure_column()
      :property:

      Returns name of the column to compute the quantile of absolute error over.


   .. py:method:: format(value)

      Returns a string representation of this object.


   .. py:method:: compute_on_joined_output(joined_output)

      Computes quantile absolute error value from combined dataframe.


   .. py:method:: output()
      :property:

      Retursn the name of the run output.


   .. py:method:: join_columns()
      :property:

      Returns the name of the join columns.


   .. py:method:: compute_for_baseline(dp_outputs, baseline_outputs)

      Computes metric value.


   .. py:method:: name()
      :property:

      Returns the name of the metric.


   .. py:method:: description()
      :property:

      Returns the description of the metric.


   .. py:method:: baselines()
      :property:

      Returns the baselines used for the metric.


   .. py:method:: __call__(dp_outputs, baseline_outputs)

      Computes the given metric on the given DP and baseline outputs.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs.







